--- a/MCRX/Applications/DataViewer/DataViewer/packages.config
+++ b/MCRX/Applications/DataViewer/DataViewer/packages.config
@@ -4,7 +4,7 @@
   <package id="Autofac.Extras.DynamicProxy2" version="3.0.0" targetFramework="net452" />
   <package id="AutoMapper" version="3.3.1" targetFramework="net452" />
   <package id="Castle.Core" version="3.0.0.4001" targetFramework="net452" />
-  <package id="Extended.Wpf.Toolkit" version="3.4.0" targetFramework="net452" />
+  <package id="CompareNETObjects" version="4.57.0" targetFramework="net452" />
   <package id="log4net" version="2.0.8" targetFramework="net452" />
   <package id="Microsoft.Xaml" version="4.0.0.0" targetFramework="net452" />
 </packages>
